# Dragon-Blaze-Game-Library

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md
DBGL_Base/: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  Doxyfile.in
DBGL_Base/Examples/: CMakeLists.txt
DBGL_Base/Examples/Basics/: Basics.cpp  CMakeLists.txt
DBGL_Base/Examples/Entities/: CMakeLists.txt  Entities.cpp
DBGL_Base/Examples/Movement/: CMakeLists.txt  Movement.cpp
DBGL_Base/Examples/ResourceManager/: CMakeLists.txt  ResourceManager.cpp
DBGL_Base/Examples/Scene/: CMakeLists.txt  Scene.cpp
DBGL_Base/Examples/Shader/: CMakeLists.txt  DiffSpec.frag  Shader.cpp
DBGL_Base/Examples/Sprite/: CMakeLists.txt  Sprite.cpp
DBGL_Base/Examples/common/: DBGL_Logo_512.tga  DefaultFont.bff  DiffSpec.frag  DiffSpec.vert  DiffSpecNorm.frag  DiffSpecNorm.vert  DiffSpec_Sun.frag  DiffSpec_Sun.vert  Earth_Diffuse.DDS  Marble_Cream_01_Diffuse.DDS  Mercury_Diffuse.DDS  Moon_Diffuse.DDS  NoLight.frag  NoLight.vert  Sun_Diffuse.DDS  Venus_Diffuse.DDS
DBGL_Base/include/: DBGL_Base_Config.h  DBGL_Base_Config.h.in
DBGL_Base/include/DBGL/: DBGL_Base_Config.h.in
DBGL_Base/include/DBGL/Math/: Hyperrectangle.h  Hyperrectangle.imp  Matrix.h  Matrix.imp  Matrix2x2.h  Matrix3x3.h  Matrix3x3.imp  Matrix4x4.h  Matrix4x4.imp  Quaternion.h  Quaternion.imp  Utility.h  Utility.imp  Vector.h  Vector.imp  Vector2.h  Vector2.imp  Vector3.h  Vector4.h  Vector4.imp  Vector_Common.hpart  Vector_Common.spart
DBGL_Base/include/DBGL/Rendering/: Camera.h  RenderContext.h  ShaderProgram.h
DBGL_Base/include/DBGL/System/: DBGLApplication.h  IDbglApplication.h  System.h
DBGL_Base/include/DBGL/Window/: Input.h  SimpleWindow.h  Window.h  WindowManager.h
DBGL_Base/include/Entity/: Entity.h  RenderEntityComponent.h
DBGL_Base/include/Log/: Log.h
DBGL_Base/include/Math/: Constants.h  Matrix.h  Matrix.imp  Matrix2x2.h  Matrix2x2.imp  Matrix3x3.h  Matrix3x3.imp  Matrix4x4.h  Matrix4x4.imp  Quaternion.h  Quaternion.imp  Tools.h  Utility.h  Vector.h  Vector.imp  Vector2.h  Vector2.imp  Vector3.h  Vector3.imp  Vector4.h  Vector4.imp  Vector_Common.hpart  Vector_Common.spart
DBGL_Base/include/Rendering/: Camera.h  Mesh.h  RenderContext.h  Renderable.h  ShaderProgram.h  Texture.h  Viewport.h
DBGL_Base/include/Rendering/Mesh/: Mesh.h  MeshLoader.h  OBJMeshLoader.h
DBGL_Base/include/Rendering/Texture/: BogusTextureLoader.h  DDSTextureLoader.h  TGATextureLoader.h  Texture.h  TextureLoader.h
DBGL_Base/include/System/Event/: Event.h  Event.imp
DBGL_Base/include/System/Properties/: Properties.h
DBGL_Base/include/Window/: AbstractWindow.h  SimpleWindow.h  Window.h  WindowManager.h
DBGL_Base/src/DBGL/Math/: Utility.cpp
DBGL_Base/src/DBGL/Rendering/: Camera.cpp  RenderContext.cpp  ShaderProgram.cpp
DBGL_Base/src/DBGL/System/: System.cpp
DBGL_Base/src/Entity/: Entity.cpp  RenderEntityComponent.cpp
DBGL_Base/src/Log/: Log.cpp
DBGL_Base/src/Math/: Tools.cpp  Utility.cpp
DBGL_Base/src/Rendering/: Camera.cpp  Mesh.cpp  RenderContext.cpp  Renderable.cpp  ShaderProgram.cpp  Texture.cpp  Viewport.cpp
DBGL_Base/src/Window/: AbstractWindow.cpp  SimpleWindow.cpp  Window.cpp  WindowManager.cpp
DBGL_Base_Test/: .cproject  .gitignore  .project  CMakeLists.txt  TestProperties.txt
DBGL_Base_Test/src/: Main.cpp  Test.cpp
DBGL_Base_Test/src/Math/: Hyperrectangle_Test.cpp  Matrix2x2_Test.cpp  Matrix3x3_Test.cpp  Matrix4x4_Test.cpp  Matrix_Test.cpp  Quaternion_Test.cpp  Utility_Test.cpp  Vector2_Test.cpp  Vector3_Test.cpp  Vector4_Test.cpp  Vector_Test.cpp
DBGL_Base_Test/src/Window/: Window_Test.cpp
DBGL_Core/: CMakeLists.txt  Doxyfile.in
DBGL_Core/test/: CMakeLists.txt
DBGL_Core/test/AllocatorTests/: CMakeLists.txt  PoolAllocatorTest.cpp  StackAllocatorTest.cpp
DBGL_Core/test/HandleTests/: HandleTest.cpp
DBGL_Core/test/HashingTests/: CMakeLists.txt  FNVHasherTest.cpp  OATHasherTest.cpp
DBGL_Core/test/MathTests/: HyperPlaneTests.cpp  HyperSphereTests.cpp  MatrixTests.cpp  VectorTests.cpp
DBGL_Core/test/ParserTests/: CMakeLists.txt
DBGL_Core/test/ShapeTests/: HyperPlaneTests.cpp  HyperSphereTests.cpp
DBGL_Core/test/Threading/: ThreadingTest.cpp
DBGL_Core/test/UtilityTests/: MeshUtilityTest.cpp  StringUtilityTest.cpp  TextureUtilityTest.cpp  UIDTest.cpp
DBGL_Platform/: CMakeLists.txt  Doxyfile.in
DBGL_Platform/test/: CMakeLists.txt
DBGL_Platform/test/OSTests/: CMakeLists.txt
DBGL_Platform/test/OpenGL33Tests/: CMakeLists.txt
DBGL_Renderer/: CMakeLists.txt
DBGL_Renderer/examples/: CMakeLists.txt
DBGL_Renderer/examples/Simple/: CMakeLists.txt  main.cpp
DBGL_Resources/: CMakeLists.txt  Doxyfile.in
DBGL_Resources/examples/: CMakeLists.txt
DBGL_Resources/examples/ModelViewer/: CMakeLists.txt  main.cpp
DBGL_Resources/plugins/: CMakeLists.txt
DBGL_Resources/plugins/Mesh/: CMakeLists.txt
DBGL_Resources/plugins/Texture/: CMakeLists.txt
DBGL_Resources/test/: CMakeLists.txt  main.cpp
DBGL_Resources/test/ManagerTests/: ResourceManagerTest.cpp
DBGL_Resources/test/MeshTests/: MeshIOTest.cpp  MeshResourceTest.cpp  MeshUtilityTest.cpp
DBGL_Resources/test/ShaderTests/: ShaderResourceTest.cpp
DBGL_Resources/test/TextureTests/: TextureIOTest.cpp  TextureResourceTest.cpp  TextureUtilityTest.cpp  test.DDS
DBGL_Scene/: CMakeLists.txt  Doxyfile.in
DBGL_Scene/Examples/: CMakeLists.txt
DBGL_Scene/Examples/Shader/: CMakeLists.txt  Shader.cpp
DBGL_Scene/Examples/common/: Bricks01.DDS  DiffSpecNorm.frag  NoLight.vert
DBGL_Scene/include/Entity/: Entity.h  RenderEntityComponent.h  TransformEntityComponent.h
DBGL_Scene/include/Rendering/: Renderable.h  SceneRenderContext.h  Viewport.h
DBGL_Scene/include/Scenegraph/: SceneNode.h  SceneNodeObject.h
DBGL_Scene/include/Window/: SceneWindow.h  SimpleSceneWindow.h
DBGL_Scene/src/Entity/: Entity.cpp  RenderEntityComponent.cpp  TransformEntityComponent.cpp
DBGL_Scene/src/Rendering/: SceneRenderContext.cpp  Viewport.cpp
DBGL_Scene/src/Scenegraph/: SceneNode.cpp
DBGL_Scene/src/Window/: SceneWindow.cpp  SimpleSceneWindow.cpp
(+499 files in other folders)
